@@ -1,4 +1,4 @@
-LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.136 $>
+LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.137 $>
 
 
 [Note: This file does not mention every change made to the NetBSD source tree.
@@ -353,3 +353,5 @@ Changes from NetBSD 1.6 to NetBSD 2.0:
 	wm(4): add support for i82540EP. [kent 20030405]
 	scsi: Add a MI driver for the Symbios/NCR 53c700 SCSI controller
 		written by Shuichiro URATA. [tsutsui 20030406]
+	rsh(1), rlogin(1): Add -p flag to allow specifying a non-standard
+		port number. [hubertf 20030407]
